<resources>
    <string name="app_name" translatable="false">PLC To Phone</string>
    <string name="firstRow">First variable</string>
    <string name="password" translatable="false">password</string>
    <string name="login" translatable="false">10.16.9.50</string>
    <string name="buttonConnect">Connect</string>
    <string name="dialog_error_connection_failed">Unable to connect : TCP connection failed.</string>
    <string name="dialog_title">Error</string>
    <string name="dialog_ok" translatable="false">OK</string>
    <string name="dialog_error_timeout">A timeout occurred waiting a reply.</string>
    <string name="dialog_error_reset">Connection reset by peer.</string>
    <string name="dialog_error_send_data">TCP error sending data.</string>
    <string name="dialog_error_receive_data">TCP error receiving data.</string>
    <string name="dialog_error_s7_data_read">Error during data read.</string>
    <string name="dialog_error_s7_data_write">Error during data write.</string>
    <string name="dialog_error_buffer_too_small">The buffer supplied is too small.</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>


    <!-- Example settings for Notifications -->

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="item_stats_activity">Statistics</string>
    <string name="item_output_activity">Outputs</string>
    <string name="item_api_activity">PLC I/O status</string>
    <string name="reset">Reset</string>
    <string name="liters_evaporated">Liters evaporated</string>
    <string name="times_to">Times to ?</string>
    <string name="money_per_liter">€/Liter</string>
    <string name="consummed_energy">Energy consummed</string>
    <string name="text_button_read">Read</string>
    <string name="text_button_write">Write</string>
    <string name="logo_content_description">Electrolux logo</string>
    <string name="pref_title_autorefresh">Automatic refresh of variables</string>
    <string name="pref_summary_autorefresh">Switch it so the data refreshes alone</string>
    <string name="pref_key_autorefresh" translatable="false">refresh_switch</string>
    <string name="pref_category_title">Utility</string>
    <string name="pref_title_cost_staff">Staff hourly cost</string>
    <string name="pref_key_staff_cost" translatable="false">staff_cost</string>
    <string name="pref_title_elec_cost">Electricity cost</string>
    <string name="pref_key_elec_cost" translatable="false">elec_cost</string>
    <string name="pref_key_machine_cost" translatable="false">machine_cost</string>
    <string name="pref_title_machine_price">Machine price</string>
    <string name="pref_title_spare_part">Spare part cost</string>
    <string name="pref_key_spare_part" translatable="false">spare_part</string>
    <string name="stats_nbrH">Number of hour</string>
    <string name="stats_nbrRaz">Number of reset</string>
    <string name="stats_nbrIdle">Idle time (hours)</string>
    <string name="pref_key_text_or_image" translatable="false">text_or_image</string>
    <string name="pref_title_text_image">Text for I/O</string>
    <string name="pref_summary_text_image">Switch it to use text instead of picture for the I/O</string>
    <string name="io_pic_description">Picture to show the state of the corresponding I/O</string>
    <string name="secondRow">Second variable</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="pref_category_title_second">Costs</string>
    <string name="support_email" translatable="false">florent.denef@gmail.com</string>
    <string name="plc_text_output">Output</string>
    <string name="plc_text_input">Input</string>
    <string name="about_author">Made by Denef Florent</string>
    <string name="about_version_number" translatable="false">Version v0.0.1</string>
    <string name="about_version_type">Evaluation version</string>
    <string name="icon_email_description">Icon for email support</string>
    <string name="pref_key_refresh_time" translatable="false">refresh_time</string>
    <string name="pref_title_refresh_time">Refresh period between reads (in ms)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="item_title_test_plc">Test PLC</string>
    <string name="test_edit_var_address">Var address</string>
    <string name="test_edit_type_data">Type of data</string>
    <string name="test_edit_data" translatable="false">Data</string>

</resources>
