<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_title">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_autorefresh"
            android:summary="@string/pref_summary_autorefresh"
            android:title="@string/pref_title_autorefresh" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_text_or_image"
            android:summary="@string/pref_summary_text_image"
            android:title="@string/pref_title_text_image" />
        <EditTextPreference
            android:defaultValue="100"
            android:inputType="number"
            android:key="@string/pref_key_refresh_time"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_refresh_time" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_title_second">
        <EditTextPreference
            android:defaultValue="0"
            android:editable="true"
            android:inputType="numberDecimal"
            android:key="@string/pref_key_staff_cost"
            android:title="@string/pref_title_cost_staff" />
        <EditTextPreference
            android:defaultValue="0"
            android:editable="true"
            android:inputType="numberDecimal"
            android:key="@string/pref_key_elec_cost"
            android:title="@string/pref_title_elec_cost" />
        <EditTextPreference
            android:defaultValue="0"
            android:editable="true"
            android:inputType="numberDecimal"
            android:key="@string/pref_key_machine_cost"
            android:title="@string/pref_title_machine_price" />
        <EditTextPreference
            android:defaultValue="0"
            android:editable="true"
            android:inputType="numberDecimal"
            android:key="@string/pref_key_spare_part"
            android:title="@string/pref_title_spare_part" />
    </PreferenceCategory>

</PreferenceScreen>
