<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/nav_imageView"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_content_description"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_electrolux_logo_master_blue_rgb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/mail_support_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/icon_email_description"
            android:scaleType="fitStart"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_email_black" />

        <Space
            android:id="@+id/spaceNav"
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/supportMail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:text="@string/support_email"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>