<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.denefflo.api_to_phone.AboutActivityFragment"
    tools:showIn="@layout/activity_about">

    <ImageView
        android:id="@+id/logo_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/around_logo"
        android:layout_marginStart="@dimen/around_logo"
        android:layout_marginTop="@dimen/around_logo"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_content_description"
        android:scaleType="fitStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_master_blue_rgb" />

    <TableLayout
        android:id="@+id/content_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/around_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@id/logo_about"
        app:layout_constraintRight_toRightOf="@id/logo_about"
        app:layout_constraintTop_toBottomOf="@id/logo_about"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:id="@+id/first_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/author_and_co"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/about_author"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/second_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/version_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/about_version_type"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:id="@+id/third_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/version_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/about_version_number"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>


</android.support.constraint.ConstraintLayout>
