<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.denefflo.api_to_phone.OutputFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_output"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/around_logo"
            android:layout_marginStart="@dimen/around_logo"
            android:layout_marginTop="@dimen/around_logo"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_content_description"
            android:scaleType="fitStart"
            android:visibility="visible"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_master_blue_rgb" />

        <TableLayout
            android:id="@+id/table_output"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_output"
            app:layout_constraintVertical_bias="0.303">

            <TableRow
                android:id="@+id/row_reset"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/reset"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/result_reset_plc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:id="@+id/row_consumed_energy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/consumed_energy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/consummed_energy"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/result_consumed_energy_plc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:id="@+id/row_liters"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/liters_evaporated"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/liters_evaporated"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/result_liters_evaporated"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/row_time_for"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/time_for"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/times_to"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/result_time_for"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/row_money_liter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/money_liter"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/money_per_liter"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/result_money_liter"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
